feat: rewrite api interface

--- a/.github/.CONTRIBUTING.md
+++ b/.github/.CONTRIBUTING.md
@@ -22,11 +22,11 @@ Once you have completed your changes, you can create a [pull request from the fo
 
 ## Pull requests
 
-For large or impactful change, please open an [issue](https://github.com/hzhu/eth-balances/issues/new) or [discussion](https://github.com/hzhu/eth-balances/discussions/new?category=q-a) prior to submitting a pull request. This allows the project maintainers and contributors to discuss alternatives and solutions prior to implementation.
+For large or impactful change, please open an [issue](https://github.com/0xProject/0x-parser/issues/new) or [discussion](https://github.com/0xProject/0x-parser/discussions/new/choose) prior to submitting a pull request. This allows the project maintainers and contributors to discuss alternatives and solutions prior to implementation.
 
 ### Workflow
 
-1. Open an issue
+1. Open a new GitHub [issue](https://github.com/0xProject/0x-parser/issues/new)
 1. Fork the repo and create a branch
 1. Add new commits
    1. Commits should be [concise, descriptive, and well formatted](https://cbea.ms/git-commit/#seven-rules)
