--- a/.github/.CONTRIBUTING.md
+++ b/.github/.CONTRIBUTING.md
@@ -1,55 +1,64 @@
 # Contributing Guide
 
-Thanks for your interest in contributing. Please review this guide prior to submitting a pull request.
+Thank you for your interest in contributing to our project! Before you submit a pull request, we kindly ask you to review this guide thoroughly.
 
 ## Development
 
-Start by [forking](https://docs.github.com/en/get-started/quickstart/fork-a-repo) and cloning the repository onto your computer. Afterwards, you can start development by installing the dependencies and running the tests.
+To start contributing, you should first [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) and clone the repository onto your local machine. Once you have your local copy of the repository, you can commence with development. This typically involves installing the required dependencies and executing the tests.
 
 1. Install dependencies
+
+After cloning the repository, navigate to its root directory and run the following command to install the necessary dependencies:
 
 ```
 npm install
 ```
 
-2. Run tests
+2. Setup Ethereum RPC node
+
+The tests require an Ethereum RPC node, and a URL for this node is needed. You can use any node, including your own, but the simplest way to get started is by [creating](https://docs.infura.io/infura/getting-started#2.-create-an-api-key) an API key for an RPC node on Infura. Once created, you can follow the instructions found in the `.env.example` file.
+
+3. Run tests
+
+It is essential to ensure your changes do not break existing functionality. After making your changes, execute the tests by running the following command:
 
 ```
 npm test
 ```
 
-Once you have completed your changes, you can create a [pull request from the fork](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork). Project maintainers may create pull requests in the repository without a fork.
+Once you have made your changes and verified they work correctly, you can submit a [pull request from your forked repository](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork). For project maintainers, pull requests can be made directly in the original repository without needing to create a fork.
 
 ## Pull requests
 
-For large or impactful change, please open an [issue](https://github.com/0xProject/0x-parser/issues/new) or [discussion](https://github.com/0xProject/0x-parser/discussions/new/choose) prior to submitting a pull request. This allows the project maintainers and contributors to discuss alternatives and solutions prior to implementation.
+Before proposing major changes, please open an [issue](https://github.com/0xProject/0x-parser/issues/new) or [discussion](https://github.com/0xProject/0x-parser/discussions/new/choose) for collaborative decision-making on alternatives and solutions prior to submitting a pull request. This enhances the effectiveness of your contributions and promotes collective input.
 
 ### Workflow
 
-1. Open a new GitHub [issue](https://github.com/0xProject/0x-parser/issues/new)
-1. Fork the repo and create a branch
-1. Add new commits
-   1. Commits should be [concise, descriptive, and well formatted](https://cbea.ms/git-commit/#seven-rules)
-   1. Commits should follow the [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) specification and use the [standard headings](https://github.com/googleapis/release-please/blob/cb0f936e598c5bfb8d3e0a9c0eeb57ae59a35140/src/changelog-notes.ts#L43-L54)
-   1. This repo has a linear git history and merge commits are not allowed
-1. Open a new pull request on GitHub
-   1. [Link](https://docs.github.com/en/issues/tracking-your-work-with-issues/linking-a-pull-request-to-an-issue) the issue you created earlier with the pull request
+1. **Open an [issue](https://github.com/0xProject/0x-parser/issues/new)**: Start by opening an issue detailing the problem you want to solve or the feature you want to add.
+1. **Fork and branch:** Fork the repository and create a new branch on your fork to work on the changes.
+1. **Add commits:** Add new commits to your branch. Remember:
+   1. Commits should be [concise, descriptive, and well formatted](https://cbea.ms/git-commit/#seven-rules).
+   1. Commits should follow the [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0) specification and use the [standard headings](https://github.com/googleapis/release-please/blob/cb0f936e598c5bfb8d3e0a9c0eeb57ae59a35140/src/changelog-notes.ts#L43-L54).
+   1. This repository maintains a linear git history, so merge commits are not allowed.
+1. **Open a pull request:** Open a [new pull request](https://github.com/0xProject/0x-parser/compare) on GitHub, and [link](https://docs.github.com/en/issues/tracking-your-work-with-issues/linking-a-pull-request-to-an-issue) it to the issue you created in the first step.
 
 ### Dependabot
 
-This repository uses [Dependabot](https://docs.github.com/en/code-security/dependabot) to help [secure](https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates) and [update](https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuring-dependabot-version-updates#about-version-updates-for-dependencies) project dependencies. It does this by automatically opening pull requests to update package dependencies. Project maintainers are responsible for reviewing, testing, approving, and merging Dependabot pull requests.
+This repository employs [Dependabot](https://docs.github.com/en/code-security/dependabot) to [secure](https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates) and [update](https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuring-dependabot-version-updates#about-version-updates-for-dependencies) project dependencies by automatically initiating pull requests for package upgrades. The duty of project maintainers is to review, test, approve, and merge these Dependabot-generated pull requests.
 
 ## Release
 
-Project maintainers can publish releases. Releases are automated with Google's [release-please](https://github.com/googleapis/release-please) GitHub action. Simply merge the release pull request ([release PR](https://github.com/googleapis/release-please#whats-a-release-pr)) to publish a release 🚀.
+Project maintainers are entrusted with the task of publishing new releases. These releases are automated with the assistance of Google's [release-please](https://github.com/googleapis/release-please) GitHub action. Simply put, to publish a release, you just need to merge the release pull request (PR) 🚀.
 
-The GitHub action parses [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) to help automate releases. It creates a release PR that is kept up-to-date as additional commits are merged. The release PR can be merged once maintainers are ready to publish the release. Merging the release PR triggers the action to:
+The release-please GitHub action parses [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0) to help automate the release process. It automatically generates a release PR, which is continuously updated as new commits are merged into the main branch. Once maintainers decide that it's time to publish a new release, they can merge the release PR.
 
-1. Update the `CHANGELOG.md` and `package.json`
-2. Tag the commit with the [version](https://semver.org/)
-3. Create a GitHub release based on the tag
-4. Publish [the package](https://www.npmjs.com/package/@0x/0x-parser) to npm
+Upon merging the release PR, the GitHub action initiates a series of tasks:
+
+1. Updates the `CHANGELOG.md` and `package.json` files.
+1. Tags the commit associated with the release with the [version](https://semver.org) number.
+1. Creates a new GitHub release based on this tag.
+1. Publishes a new version of [the package](https://www.npmjs.com/package/@0x/0x-parser) to npm.
 
 ## Versioning
 
-This project follows [Semantic Versioning 2.0](https://semver.org/) and the release tooling automatically parses the semantic version based on the [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/).
+This project follows [Semantic Versioning 2.0](https://semver.org/) and the release tooling automatically parses the semantic version based on the [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0).
