chore: update contributing guide

--- a/.github/.CONTRIBUTING.md
+++ b/.github/.CONTRIBUTING.md
@@ -4,9 +4,9 @@ Thank you for your interest in contributing to our project! Before you submit a 
 
 ## Development
 
-To start contributing, you should first [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) and clone the repository onto your local machine. Once you have your local copy of the repository, you can commence with development. This typically involves installing the required dependencies and executing the tests.
+First, [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) and clone the repository onto your local machine. Once you have your local copy of the repository, you can commence with development. This typically involves installing the required dependencies and executing the tests.
 
-1. Install dependencies
+### Install dependencies
 
 After cloning the repository, navigate to its root directory and run the following command to install the necessary dependencies:
 
@@ -14,23 +14,23 @@ After cloning the repository, navigate to its root directory and run the followi
 npm install
 ```
 
-2. Setup Ethereum RPC node
+### Setup Ethereum RPC node
 
-The tests require an Ethereum RPC node, and a URL for this node is needed. You can use any node, including your own, but the simplest way to get started is by [creating](https://docs.infura.io/infura/getting-started#2.-create-an-api-key) an API key for an RPC node on Infura. Once created, you can follow the instructions found in the `.env.example` file.
+The tests require an Ethereum RPC node, and a URL for this node is needed. The simplest way to get started is by [creating](https://docs.infura.io/infura/getting-started#2.-create-an-api-key) an API key for an RPC node on Infura. Once created, you can follow the instructions found in the `.env.example` file.
 
-3. Run tests
+### Run tests
 
-It is essential to ensure your changes do not break existing functionality. After making your changes, execute the tests by running the following command:
+After making your changes, execute the tests by running the following command:
 
 ```
 npm test
 ```
 
-Once you have made your changes and verified they work correctly, you can submit a [pull request from your forked repository](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork). For project maintainers, pull requests can be made directly in the original repository without needing to create a fork.
+Once you have made your changes and verified they work correctly, you can submit a [pull request from your forked repository](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork).
 
 ## Pull requests
 
-Before proposing major changes, please open an [issue](https://github.com/0xProject/0x-parser/issues/new) or [discussion](https://github.com/0xProject/0x-parser/discussions/new/choose) for collaborative decision-making on alternatives and solutions prior to submitting a pull request. This enhances the effectiveness of your contributions and promotes collective input.
+Before proposing changes, please open an [issue](https://github.com/0xProject/0x-parser/issues/new) or [discussion](https://github.com/0xProject/0x-parser/discussions/new/choose) for collaborative decision-making on solutions prior to submitting a pull request. This enhances the effectiveness of your contributions and promotes collective input.
 
 ### Workflow
 
@@ -48,7 +48,7 @@ This repository employs [Dependabot](https://docs.github.com/en/code-security/de
 
 ## Release
 
-Project maintainers are entrusted with the task of publishing new releases. These releases are automated with the assistance of Google's [release-please](https://github.com/googleapis/release-please) GitHub action. Simply put, to publish a release, you just need to merge the release pull request (PR) 🚀.
+Project maintainers are entrusted with the task of publishing new releases. Releases are automated with Google's [release-please](https://github.com/googleapis/release-please) GitHub action. Simply put, to publish a release, you simply need to merge the release pull request (PR) 🚀.
 
 The release-please GitHub action parses [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0) to help automate the release process. It automatically generates a release PR, which is continuously updated as new commits are merged into the main branch. Once maintainers decide that it's time to publish a new release, they can merge the release PR.
 
