chore: update contributing guide

--- a/.github/.CONTRIBUTING.md
+++ b/.github/.CONTRIBUTING.md
@@ -14,13 +14,9 @@ After cloning the repository, navigate to its root directory and run the followi
 npm install
 ```
 
-### Setup Ethereum RPC node
+### Testing
 
-The tests require an Ethereum RPC node, and a URL for this node is needed. The simplest way to get started is by [creating](https://docs.infura.io/infura/getting-started#2.-create-an-api-key) an API key for an RPC node on Infura. Once created, you can follow the instructions found in the `.env.example` file.
-
-### Run tests
-
-After making your changes, execute the tests by running the following command:
+The tests require a URL to an Ethereum RPC node. The simplest way to get started is by [creating](https://docs.infura.io/infura/getting-started#2.-create-an-api-key) an API key for an RPC node on Infura. Once created, you can follow the instructions found in the `.env.example` file. Run the tests by running the following command:
 
 ```
 npm test
