docs: update README.md and CONTRIBUTING.md
[skip ci]

--- a/.github/.CONTRIBUTING.md
+++ b/.github/.CONTRIBUTING.md
@@ -6,7 +6,7 @@ Thank you for your interest in contributing to our project! Before you submit a 
 
 First, [fork](https://docs.github.com/en/get-started/quickstart/fork-a-repo) and clone the repository onto your local machine. Once you have your local copy of the repository, you can commence with development. This typically involves installing the required dependencies and executing the tests.
 
-### Install dependencies
+### Install Dependencies
 
 After cloning the repository, navigate to its root directory and run the following command to install the necessary dependencies:
 
@@ -14,9 +14,11 @@ After cloning the repository, navigate to its root directory and run the followi
 npm install
 ```
 
-### Testing
+### Run the Tests
 
-The tests require a URL to an Ethereum RPC node. The simplest way to get started is by [creating](https://docs.infura.io/infura/getting-started#2.-create-an-api-key) an API key for an RPC node on Infura. Once created, you can follow the instructions found in the `.env.example` file. Run the tests by running the following command:
+Features and bug fixes must be accompanied by tests, as this library aims to maintain 100% test coverage 🧪. Focus on testing only the public interfaces; avoid testing implementation details. To run the tests, you'll need a URL to an Ethereum RPC node. The easiest way to obtain one is by [creating](https://docs.alchemy.com/docs/alchemy-quickstart-guide) an API key through Alchemy. After obtaining the key, follow the instructions in the `.env.example` file to get started.
+
+Run the tests by running the following command:
 
 ```
 npm test
@@ -24,7 +26,7 @@ npm test
 
 Once you have made your changes and verified they work correctly, you can submit a [pull request from your forked repository](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork).
 
-## Pull requests
+## Pull Requests
 
 Before proposing changes, please open an [issue](https://github.com/0xProject/0x-parser/issues/new) or [discussion](https://github.com/0xProject/0x-parser/discussions/new/choose) for collaborative decision-making on solutions prior to submitting a pull request. This enhances the effectiveness of your contributions and promotes collective input.
 
@@ -40,7 +42,7 @@ Before proposing changes, please open an [issue](https://github.com/0xProject/0x
 
 ### Dependabot
 
-This repository employs [Dependabot](https://docs.github.com/en/code-security/dependabot) to [secure](https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates) and [update](https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuring-dependabot-version-updates#about-version-updates-for-dependencies) project dependencies by automatically initiating pull requests for package upgrades. The duty of project maintainers is to review, test, approve, and merge these Dependabot-generated pull requests.
+This repository employs [Dependabot 🤖](https://docs.github.com/en/code-security/dependabot) to [secure](https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates) and [update](https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuring-dependabot-version-updates#about-version-updates-for-dependencies) project dependencies by automatically initiating pull requests for package upgrades. The duty of project maintainers is to review, test, approve, and merge these Dependabot-generated pull requests.
 
 ## Release
 
